--- a/editor.html
+++ b/editor.html
@@ -8,6 +8,11 @@
 		<style>
 			@font-face {
 				font-family: "minecraft pixel perfect";
+				src: url("font/minecraft-unicode.otf");
+				font-weight: bold;
+			}
+			@font-face {
+				font-family: "minecraft pixel perfect";
 				src: url("font/Minecraft-Regular.otf");
 			}
 			@font-face {
@@ -15,6 +20,7 @@
 				src: url("font/Minecraft-Bold.ttf");
 				font-weight: bold;
 			}
+
 			#title,
 			#output {
 				/* this results in 200% font scale (2x2 px per font px) */
