--- a/editor.html
+++ b/editor.html
@@ -92,7 +92,7 @@
 			}
 		</style>
 	</head>
-	<body style="margin: 0; font-family: sans-serif">
+	<body style="margin: 0"; class="page">
 		<div style="height: 100vh; display: flex; flex-direction: row">
 			<div style="flex: 1; display: flex; flex-direction: column">
 				<div
