--- a/editor.html
+++ b/editor.html
@@ -6,8 +6,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Book Editor</title>
 		<style>
-			
-
+			@font-face {
+				font-family: "minecraft pixel perfect";
+				src: url("font/minecraft-unicode.otf");
+			}
+			@font-face {
+				font-family: "minecraft pixel perfect";
+				src: url("font/Minecraft-Bold.ttf");
+				font-weight: bold;
+			}
 			#title,
 			#output {
 				/* this results in 200% font scale (2x2 px per font px) */
@@ -92,7 +99,7 @@
 			}
 		</style>
 	</head>
-	<body style="margin: 0"; font-family="sans-serif">
+	<body style="margin: 0; font-family: sans-serif">
 		<div style="height: 100vh; display: flex; flex-direction: row">
 			<div style="flex: 1; display: flex; flex-direction: column">
 				<div
