--- a/editor.html
+++ b/editor.html
@@ -8,7 +8,7 @@
 		<style>
 			@font-face {
 				font-family: "minecraft pixel perfect";
-				src: url("font/minecraft-unicode.otf");
+				src: url("font/Minecraft-Regular.otf");
 			}
 			@font-face {
 				font-family: "minecraft pixel perfect";
