--- a/editor.html
+++ b/editor.html
@@ -7,18 +7,18 @@
 		<title>Book Editor</title>
 		<style>
 			@font-face {
-				font-family: "minecraft pixel perfect";
+				font-family: "minecraft-pixel-perfect";
 				src: url("font/Minecraft-Regular.otf");
 			}
 			@font-face {
-				font-family: "minecraft pixel perfect";
+				font-family: "minecraft-pixel-perfect";
 				src: url("font/Minecraft-Bold.ttf");
 				font-weight: bold;
 			}
 			#title,
 			#output {
 				/* this results in 200% font scale (2x2 px per font px) */
-				font: 20px / 0.9em "minecraft pixel perfect", serif;
+				font: 20px / 0.9em "minecraft-pixel-perfect", serif;
 			}
 			#title {
 				font-size: 12px;
