Pieces left breathing

--- a/books/CivMC/Cervanthes/CRVEntry.html
+++ b/books/CivMC/Cervanthes/CRVEntry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en">
 <head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRVEntry - by Cervanthes - Civ Books</title>
+    <title>Pieces left breathing - by Cervanthes - Civ Books</title>
     <link rel="prefetch" href="../../../font/Minecraft-Regular.otf">
     <link rel="prefetch" href="../../../img/page.png">
     <link rel="stylesheet" href="../../../style.css">
@@ -219,4 +219,5 @@ project by <a href="https://github.com/Gjum" target="_blank" rel="noopener noref
 <a href="#top"><img class="bottom-logo" src="../../../img/icon.png" alt="Civ Books Logo" /></a>
 </footer>
 <script defer src="../../../book.js"></script>
+
 </body></html>
